--- a/1. Data_preview.ipynb
+++ b/1. Data_preview.ipynb
@@ -1,6 +1,86 @@
 {
- "cells": [],
- "metadata": {},
+ "cells": [
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "# Get example data\n",
+    "housing = pd.read_csv(\"housing.csv\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Get data description"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "housing.head()\n",
+    "housing.info()\n",
+    "housing[\"ocean_proximity\"].value_counts()\n",
+    "housing.describe()\n",
+    "\n",
+    "housing.hist(bins=50, figsize=(20,15))\n",
+    "plt.show()\n",
+    "\n",
+    "housing[\"median_income\"].hist()\n",
+    "plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# make num to categories"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "housing[\"income_cat\"] = np.ceil(housing[\"median_income\"] / 1.5) ## Divide by 1.5 to limit the number of income categories\n",
+    "housing[\"income_cat\"].where(housing[\"income_cat\"] < 5, 5.0, inplace=True) ## Label those above 5 as 5\n",
+    "## Or use cut when you need to segment and sort data values into bins.\n",
+    "## This function is also useful for going from a continuous variable to a categorical variable.\n",
+    "housing[\"income_cat\"] = pd.cut(housing[\"median_income\"],\n",
+    "                               bins=[0., 1.5, 3.0, 4.5, 6., np.inf],\n",
+    "                               labels=[1, 2, 3, 4, 5])"
+   ]
+  }
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.7.3"
+  }
+ },
  "nbformat": 4,
  "nbformat_minor": 2
 }
